combined operations 'map' and 'flatMap' in two methods